--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@op-engineering/op-sqlite": "^2.0.13",
+    "@tanstack/react-query": "^5.17.9",
     "react": "18.2.0",
     "react-native": "0.73.2"
   },
