--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "web": "webpack serve --mode=development --config web/webpack.config.js"
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
@@ -17,9 +18,11 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.17.9",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -32,11 +35,16 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.19.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
