--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "ajv": "^8.12.0",
     "babel-jest": "^29.6.3",
     "babel-loader": "^9.1.3",
     "eslint": "^8.19.0",
